# patient_advocacy_agent

./: .env  ARCHITECTURE.md  CLAUDE_SETUP.md  COARSE_CATEGORIES_README.md  DATASET_DOWNLOAD_OPTIONS.md  DATA_PIPELINE_GUIDE.md  DATA_SHARING.md  ENVIRONMENT_SETUP.md  FILE_INVENTORY.md  GETTING_STARTED.md  MPS_APPLE_SILICON.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.json  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  SCRIPTS_SUMMARY.md  build_index.py  claude_integration_example.py  cleanup_project.py  config.yaml  download_scin_dataset.py  download_scin_from_github.py  download_scin_gcs.py  download_scin_gcs_working.py  evaluate_embedder.py  example_claude_usage.py  example_usage.py  install_claude.sh  mkdocs.yml  pyproject.toml  test_gcs_access.py  test_gcs_connection.py  train_embedder.py  verify_setup.py
archive/: README.md  monitor_training.sh  train_embedder_coarse.py  train_embedder_labeled.py  train_full_labeled.py  train_siglip_hf.py  train_simple.py  training_log_hf.txt
archive/old_docs/: ARCHITECTURE.md  DOCUMENTATION_INDEX.md  QUICKSTART.md  (+3 more)
docs/: DATA_PIPELINE_GUIDE.md  SETUP_COMPLETE.md  STATUS.md  WORKFLOW_STATUS.md  index.md
experiments/: README.md
logs/: README.md
plots/: README.md  embedding_clustering_report.json  embedding_comparison_results.json
utils/: README.md  check_device.py  check_scin_labels.py  create_coarse_metadata.py  create_correct_metadata.py  create_synthetic_labels.py  download_correct_labeled_images.py  download_labeled_images.py  download_scin_labels.py  merge_scin_labels.py  test_gcs_access.py  test_labeled_data.py
(+26 files in other folders)
